# StatskontoretScraper

./: .gitignore  LICENSE  README.md  pyproject.toml  sources.json
.github/workflows/: local-build.yml  publish.yml  sync-mcp-space.yml
mcp/: Dockerfile  README.md  app.py  pyproject.toml
statskontoret_scraper/: artifacts.py  cli.py  config.py  crawl.py  models.py  normalize.py  publish.py  spiders.py
