[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statskontoret-mcp"
version = "0.1.0"
description = "FastMCP server for the Statskontoret public knowledge base."
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.0",
    "fastmcp>=2.13.0",
    "huggingface_hub>=0.34.0",
    "starlette>=0.48.0",
]

[tool.setuptools]
py-modules = ["app"]
